force-app/main/default/objects/ARMT_MigrationJob__c/ARMT_MigrationJob__c.object-meta.xml
<CustomObject>
    <label>ARMT Migration Job</label>
    <pluralLabel>ARMT Migration Jobs</pluralLabel>
    <description>Tracks migration jobs for the Advanced Record Migration Tool (ARMT), including status, start/end times, and migration metadata.</description>
    <nameField>
        <label>Job Name</label>
        <type>AutoNumber</type>
        <displayFormat>Job-{00000}</displayFormat>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>