force-app/main/default/objects/ARMT_MigrationJob__c/fields/EndDate__c.field-meta.xml
<CustomField>
    <fullName>EndDate__c</fullName>
    <label>End Date</label>
    <description>Timestamp when the migration execution engine completes processing. Nullable — blank until the job reaches a terminal state.</description>
    <type>DateTime</type>
</CustomField>