force-app/main/default/objects/ARMT_MigrationJob__c/fields/MigrationName__c.field-meta.xml
<CustomField>
    <fullName>MigrationName__c</fullName>
    <label>Migration Name</label>
    <description>Human-readable name for this migration job, used to identify the job in reports and dashboards.</description>
    <type>Text</type>
    <length>255</length>
</CustomField>