force-app/main/default/objects/ARMT_MigrationJob__c/fields/MigrationStatus__c.field-meta.xml
<CustomField>
    <fullName>MigrationStatus__c</fullName>
    <label>Migration Status</label>
    <description>Tracks the current status of the migration job through its lifecycle state machine.</description>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Discovering</fullName>
            </value>
            <value>
                <fullName>Mapping</fullName>
            </value>
            <value>
                <fullName>Validating</fullName>
            </value>
            <value>
                <fullName>Ready</fullName>
            </value>
            <value>
                <fullName>Snapshotting</fullName>
            </value>
            <value>
                <fullName>Executing</fullName>
            </value>
            <value>
                <fullName>Comparing</fullName>
            </value>
            <value>
                <fullName>Post-Processing</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>Rolling Back</fullName>
            </value>
            <value>
                <fullName>Rollback Complete</fullName>
            </value>
            <value>
                <fullName>Paused</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>