force-app/main/default/objects/ARMT_MigrationJob__c/fields/StartDate__c.field-meta.xml
<CustomField>
    <fullName>StartDate__c</fullName>
    <label>Start Date</label>
    <description>Timestamp when the migration execution engine begins processing.</description>
    <type>DateTime</type>
</CustomField>